RESOLVED FIXED308051
[GLib] NetworkProcess crashes navigating to Twitch
https://bugs.webkit.org/show_bug.cgi?id=308051
Summary [GLib] NetworkProcess crashes navigating to Twitch
Simon Pena
Reported 2026-02-17 07:27:14 PST
When navigating to https://www.twitch.tv/directory, the NetworkProcess can be observed crashing.
Attachments
Simon Pena
Comment 1 2026-02-17 07:32:08 PST
EWS
Comment 2 2026-02-17 08:56:43 PST
Committed 307708@main (368c87cabe76): <https://commits.webkit.org/307708@main> Reviewed commits have been landed. Closing PR #58853 and removing active labels.
Simon Pena
Comment 3 2026-02-17 09:14:40 PST
*** Bug 300808 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.