[GLib] NetworkProcess crashes navigating to Twitch https://bugs.webkit.org/show_bug.cgi?id=308051

Reviewed by Adrian Perez de Castro.

The NetworkProcess was crashing in NetworkMDNSRegisterGLib. This ensures
the correct evaluation order of function arguments to registerMDNSName.

Tested on Twitch without any further issues.

* Source/WebKit/NetworkProcess/glib/NetworkMDNSRegisterGLib.cpp:
(WebKit::NetworkMDNSRegister::registerMDNSName):

Canonical link: https://commits.webkit.org/307708@main